<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="39dp" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="232dp" />

        <EditText
            android:id="@+id/contrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="298dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="377dp" />
        <Button
            android:id="@+id/registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registro"
            tools:layout_editor_absoluteX="135dp"
            tools:layout_editor_absoluteY="377dp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>