<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nuevo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="132dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nombreG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lugarG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lugar"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.button.MaterialButton
                android:id="@+id/guardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text= "Guardar" />

        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>